core/sireum-pilar-parser-antlr4/src/main/java/org/sireum/pilar/parser/Antlr4PilarParser.java
// Generated from /Users/robby/Repositories/Sireum-Private/sireum-v3/core/sireum-pilar-parser-antlr4/src/main/resources/org/sireum/pilar/parser/Antlr4Pilar.g4 by ANTLR 4.5.1
package org.sireum.pilar.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Antlr4PilarParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
            T__24 = 25, T__25 = 26, LIT = 27, ID = 28, WS = 29, ERROR_CHAR = 30;
    public static final int
            RULE_modelFile = 0, RULE_model = 1, RULE_modelElement = 2, RULE_globalVarDecl = 3,
            RULE_procDecl = 4, RULE_param = 5, RULE_procBody = 6, RULE_localVarDecl = 7,
            RULE_location = 8, RULE_transformation = 9, RULE_action = 10, RULE_jump = 11,
            RULE_switchCase = 12, RULE_exp = 13, RULE_primArgs = 14, RULE_expSuffix = 15,
            RULE_prim = 16, RULE_arg = 17, RULE_lit = 18, RULE_annotation = 19;
    public static final String[] ruleNames = {
            "modelFile", "model", "modelElement", "globalVarDecl", "procDecl", "param",
            "procBody", "localVarDecl", "location", "transformation", "action", "jump",
            "switchCase", "exp", "primArgs", "expSuffix", "prim", "arg", "lit", "annotation"
    };

    private static final String[] _LITERAL_NAMES = {
            null, "'global'", "'var'", "';'", "'def'", "'('", "','", "')'", "'{'",
            "'}'", "'#'", "'call'", "':='", "'goto'", "'assert'", "'assume'", "'ext'",
            "'if'", "'then'", "'else'", "'return'", "'switch'", "'default'", "':'",
            "'jext'", "'case'", "'@'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, "LIT", "ID", "WS", "ERROR_CHAR"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "Antlr4Pilar.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public Antlr4PilarParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class ModelFileContext extends ParserRuleContext {
        public ModelContext model() {
            return getRuleContext(ModelContext.class, 0);
        }

        public TerminalNode EOF() {
            return getToken(Antlr4PilarParser.EOF, 0);
        }

        public ModelFileContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_modelFile;
        }
    }

    public final ModelFileContext modelFile() throws RecognitionException {
        ModelFileContext _localctx = new ModelFileContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_modelFile);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(40);
                model();
                setState(41);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ModelContext extends ParserRuleContext {
        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public List<ModelElementContext> modelElement() {
            return getRuleContexts(ModelElementContext.class);
        }

        public ModelElementContext modelElement(int i) {
            return getRuleContext(ModelElementContext.class, i);
        }

        public ModelContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_model;
        }
    }

    public final ModelContext model() throws RecognitionException {
        ModelContext _localctx = new ModelContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_model);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(46);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__25) {
                    {
                        {
                            setState(43);
                            annotation();
                        }
                    }
                    setState(48);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(52);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__0 || _la == T__3) {
                    {
                        {
                            setState(49);
                            modelElement();
                        }
                    }
                    setState(54);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ModelElementContext extends ParserRuleContext {
        public ModelElementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_modelElement;
        }

        public ModelElementContext() {
        }

        public void copyFrom(ModelElementContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class GlobalVarContext extends ModelElementContext {
        public GlobalVarDeclContext globalVarDecl() {
            return getRuleContext(GlobalVarDeclContext.class, 0);
        }

        public GlobalVarContext(ModelElementContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class ProcedureContext extends ModelElementContext {
        public ProcDeclContext procDecl() {
            return getRuleContext(ProcDeclContext.class, 0);
        }

        public ProcedureContext(ModelElementContext ctx) {
            copyFrom(ctx);
        }
    }

    public final ModelElementContext modelElement() throws RecognitionException {
        ModelElementContext _localctx = new ModelElementContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_modelElement);
        try {
            setState(59);
            switch (_input.LA(1)) {
                case T__0:
                    _localctx = new GlobalVarContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(55);
                    match(T__0);
                    setState(56);
                    match(T__1);
                    setState(57);
                    globalVarDecl();
                }
                break;
                case T__3:
                    _localctx = new ProcedureContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(58);
                    procDecl();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class GlobalVarDeclContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(Antlr4PilarParser.ID, 0);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public GlobalVarDeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_globalVarDecl;
        }
    }

    public final GlobalVarDeclContext globalVarDecl() throws RecognitionException {
        GlobalVarDeclContext _localctx = new GlobalVarDeclContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_globalVarDecl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(61);
                match(ID);
                setState(65);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__25) {
                    {
                        {
                            setState(62);
                            annotation();
                        }
                    }
                    setState(67);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(68);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ProcDeclContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(Antlr4PilarParser.ID, 0);
        }

        public ProcBodyContext procBody() {
            return getRuleContext(ProcBodyContext.class, 0);
        }

        public List<ParamContext> param() {
            return getRuleContexts(ParamContext.class);
        }

        public ParamContext param(int i) {
            return getRuleContext(ParamContext.class, i);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public ProcDeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_procDecl;
        }
    }

    public final ProcDeclContext procDecl() throws RecognitionException {
        ProcDeclContext _localctx = new ProcDeclContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_procDecl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(70);
                match(T__3);
                setState(71);
                match(ID);
                setState(72);
                match(T__4);
                setState(81);
                _la = _input.LA(1);
                if (_la == ID) {
                    {
                        setState(73);
                        param();
                        setState(78);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == T__5) {
                            {
                                {
                                    setState(74);
                                    match(T__5);
                                    setState(75);
                                    param();
                                }
                            }
                            setState(80);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

                setState(83);
                match(T__6);
                setState(87);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__25) {
                    {
                        {
                            setState(84);
                            annotation();
                        }
                    }
                    setState(89);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(92);
                switch (_input.LA(1)) {
                    case T__7: {
                        setState(90);
                        procBody();
                    }
                    break;
                    case T__2: {
                        setState(91);
                        match(T__2);
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ParamContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(Antlr4PilarParser.ID, 0);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public ParamContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_param;
        }
    }

    public final ParamContext param() throws RecognitionException {
        ParamContext _localctx = new ParamContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_param);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(94);
                match(ID);
                setState(98);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__25) {
                    {
                        {
                            setState(95);
                            annotation();
                        }
                    }
                    setState(100);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ProcBodyContext extends ParserRuleContext {
        public List<LocationContext> location() {
            return getRuleContexts(LocationContext.class);
        }

        public LocationContext location(int i) {
            return getRuleContext(LocationContext.class, i);
        }

        public List<LocalVarDeclContext> localVarDecl() {
            return getRuleContexts(LocalVarDeclContext.class);
        }

        public LocalVarDeclContext localVarDecl(int i) {
            return getRuleContext(LocalVarDeclContext.class, i);
        }

        public ProcBodyContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_procBody;
        }
    }

    public final ProcBodyContext procBody() throws RecognitionException {
        ProcBodyContext _localctx = new ProcBodyContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_procBody);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(101);
                match(T__7);
                setState(108);
                _la = _input.LA(1);
                if (_la == T__1) {
                    {
                        setState(102);
                        match(T__1);
                        setState(104);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        do {
                            {
                                {
                                    setState(103);
                                    localVarDecl();
                                }
                            }
                            setState(106);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        } while (_la == ID);
                    }
                }

                setState(111);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(110);
                            location();
                        }
                    }
                    setState(113);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == T__9);
                setState(115);
                match(T__8);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class LocalVarDeclContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(Antlr4PilarParser.ID, 0);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public LocalVarDeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_localVarDecl;
        }
    }

    public final LocalVarDeclContext localVarDecl() throws RecognitionException {
        LocalVarDeclContext _localctx = new LocalVarDeclContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_localVarDecl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(117);
                match(ID);
                setState(121);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__25) {
                    {
                        {
                            setState(118);
                            annotation();
                        }
                    }
                    setState(123);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(124);
                match(T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class LocationContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(Antlr4PilarParser.ID, 0);
        }

        public TransformationContext transformation() {
            return getRuleContext(TransformationContext.class, 0);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public LocationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_location;
        }
    }

    public final LocationContext location() throws RecognitionException {
        LocationContext _localctx = new LocationContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_location);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(126);
                match(T__9);
                setState(127);
                match(ID);
                setState(131);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__25) {
                    {
                        {
                            setState(128);
                            annotation();
                        }
                    }
                    setState(133);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(134);
                transformation();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TransformationContext extends ParserRuleContext {
        public TransformationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_transformation;
        }

        public TransformationContext() {
        }

        public void copyFrom(TransformationContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class CallContext extends TransformationContext {
        public Token p;
        public Token l;

        public ArgContext arg() {
            return getRuleContext(ArgContext.class, 0);
        }

        public List<TerminalNode> ID() {
            return getTokens(Antlr4PilarParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(Antlr4PilarParser.ID, i);
        }

        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public CallContext(TransformationContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class BlockContext extends TransformationContext {
        public JumpContext jump() {
            return getRuleContext(JumpContext.class, 0);
        }

        public List<ActionContext> action() {
            return getRuleContexts(ActionContext.class);
        }

        public ActionContext action(int i) {
            return getRuleContext(ActionContext.class, i);
        }

        public BlockContext(TransformationContext ctx) {
            copyFrom(ctx);
        }
    }

    public final TransformationContext transformation() throws RecognitionException {
        TransformationContext _localctx = new TransformationContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_transformation);
        int _la;
        try {
            setState(155);
            switch (_input.LA(1)) {
                case T__10:
                    _localctx = new CallContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(136);
                    match(T__10);
                    setState(140);
                    switch (getInterpreter().adaptivePredict(_input, 14, _ctx)) {
                        case 1: {
                            setState(137);
                            exp();
                            setState(138);
                            match(T__11);
                        }
                        break;
                    }
                    setState(142);
                    ((CallContext) _localctx).p = match(ID);
                    setState(143);
                    arg();
                    setState(144);
                    match(T__12);
                    setState(145);
                    ((CallContext) _localctx).l = match(ID);
                    setState(146);
                    match(T__2);
                }
                break;
                case T__4:
                case T__12:
                case T__13:
                case T__14:
                case T__15:
                case T__16:
                case T__19:
                case T__20:
                case T__23:
                case ID:
                    _localctx = new BlockContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(151);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << ID))) != 0)) {
                        {
                            {
                                setState(148);
                                action();
                            }
                        }
                        setState(153);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(154);
                    jump();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ActionContext extends ParserRuleContext {
        public ActionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_action;
        }

        public ActionContext() {
        }

        public void copyFrom(ActionContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class ExtActionContext extends ActionContext {
        public TerminalNode ID() {
            return getToken(Antlr4PilarParser.ID, 0);
        }

        public ArgContext arg() {
            return getRuleContext(ArgContext.class, 0);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public ExtActionContext(ActionContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class AssignActionContext extends ActionContext {
        public ExpContext l;
        public ExpContext r;

        public List<ExpContext> exp() {
            return getRuleContexts(ExpContext.class);
        }

        public ExpContext exp(int i) {
            return getRuleContext(ExpContext.class, i);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public AssignActionContext(ActionContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class AssumeActionContext extends ActionContext {
        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public AssumeActionContext(ActionContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class AssertActionContext extends ActionContext {
        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public AssertActionContext(ActionContext ctx) {
            copyFrom(ctx);
        }
    }

    public final ActionContext action() throws RecognitionException {
        ActionContext _localctx = new ActionContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_action);
        int _la;
        try {
            setState(199);
            switch (_input.LA(1)) {
                case T__4:
                case ID:
                    _localctx = new AssignActionContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(157);
                    ((AssignActionContext) _localctx).l = exp();
                    setState(158);
                    match(T__11);
                    setState(159);
                    ((AssignActionContext) _localctx).r = exp();
                    setState(163);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == T__25) {
                        {
                            {
                                setState(160);
                                annotation();
                            }
                        }
                        setState(165);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(166);
                    match(T__2);
                }
                break;
                case T__13:
                    _localctx = new AssertActionContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(168);
                    match(T__13);
                    setState(169);
                    exp();
                    setState(173);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == T__25) {
                        {
                            {
                                setState(170);
                                annotation();
                            }
                        }
                        setState(175);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(176);
                    match(T__2);
                }
                break;
                case T__14:
                    _localctx = new AssumeActionContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(178);
                    match(T__14);
                    setState(179);
                    exp();
                    setState(183);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == T__25) {
                        {
                            {
                                setState(180);
                                annotation();
                            }
                        }
                        setState(185);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(186);
                    match(T__2);
                }
                break;
                case T__15:
                    _localctx = new ExtActionContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                {
                    setState(188);
                    match(T__15);
                    setState(189);
                    match(ID);
                    setState(190);
                    arg();
                    setState(194);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == T__25) {
                        {
                            {
                                setState(191);
                                annotation();
                            }
                        }
                        setState(196);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(197);
                    match(T__2);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class JumpContext extends ParserRuleContext {
        public JumpContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_jump;
        }

        public JumpContext() {
        }

        public void copyFrom(JumpContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class ExtJumpContext extends JumpContext {
        public TerminalNode ID() {
            return getToken(Antlr4PilarParser.ID, 0);
        }

        public ArgContext arg() {
            return getRuleContext(ArgContext.class, 0);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public ExtJumpContext(JumpContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class SwitchJumpContext extends JumpContext {
        public Token b;

        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public TerminalNode ID() {
            return getToken(Antlr4PilarParser.ID, 0);
        }

        public List<SwitchCaseContext> switchCase() {
            return getRuleContexts(SwitchCaseContext.class);
        }

        public SwitchCaseContext switchCase(int i) {
            return getRuleContext(SwitchCaseContext.class, i);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public SwitchJumpContext(JumpContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class GotoJumpContext extends JumpContext {
        public TerminalNode ID() {
            return getToken(Antlr4PilarParser.ID, 0);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public GotoJumpContext(JumpContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class IfJumpContext extends JumpContext {
        public Token t;
        public Token f;

        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public List<TerminalNode> ID() {
            return getTokens(Antlr4PilarParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(Antlr4PilarParser.ID, i);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public IfJumpContext(JumpContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class ReturnJumpContext extends JumpContext {
        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public ReturnJumpContext(JumpContext ctx) {
            copyFrom(ctx);
        }
    }
